--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,10 @@ file.reference.mysql-connector-java-8.0.12.jar=src/Library/mysql-connector-java-
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.12.jar}
+    ${file.reference.mysql-connector-java-8.0.12.jar}:\
+    ${libs.DatePicker.classpath}:\
+    ${libs.JXDatePicker.classpath}:\
+    ${libs.JCalendar.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -58,7 +61,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=Secure.Login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
