validation ng email

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/Apartment_Management.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.DateChooser.jar=C:\\Users\\Pinocchio\\Downloads\\OOP\\jdatechooser\\DateChooser.jar
 file.reference.mysql-connector-java-8.0.12.jar=src/Library/mysql-connector-java-8.0.12.jar
 includes=**
 jar.compress=false
@@ -36,7 +37,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.12.jar}:\
     ${libs.DatePicker.classpath}:\
     ${libs.JXDatePicker.classpath}:\
-    ${libs.JCalendar.classpath}
+    ${libs.JCalendar.classpath}:\
+    ${file.reference.DateChooser.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
